Fleshing it out now

--- a/assets/v2/neon/neon-fire-vars.scss
+++ b/assets/v2/neon/neon-fire-vars.scss
@@ -1,4 +1,8 @@
 
+// neon-fire-vars
+//
+// Variables that the Neon Fire subtheme uses
+
 @import 'neon-shared-vars';
 
 $theme-primary-color: #FF6E40;
