--- a/assets/v2/neon/neon-fire.scss
+++ b/assets/v2/neon/neon-fire.scss
@@ -1,4 +1,11 @@
 ---
 ---
+
+/**
+ * Neon Fire
+ *
+ * The Fire variant of the Neon theme system
+ */
+
 @import 'neon-fire-vars';
 @import 'neon-renderer';
