--- a/assets/v2/neon/neon-structure-vars.scss
+++ b/assets/v2/neon/neon-structure-vars.scss
@@ -1,1 +1,7 @@
+
+// neon-structure-vars
+//
+// Variables used to define the structure of a webpage that uses the Neon theme system
+
+
 @import 'material-structure-vars';
