--- a/assets/v2/neon/neon-water-vars.scss
+++ b/assets/v2/neon/neon-water-vars.scss
@@ -1,1 +1,8 @@
+
+// neon-water-vars
+//
+// Variables that the Neon Water subtheme uses
+
+@import 'neon-shared-vars';
+
 $theme-primary-color: #2962FF;
