--- a/assets/v2/neon/neon-water.scss
+++ b/assets/v2/neon/neon-water.scss
@@ -1,4 +1,11 @@
 ---
 ---
+
+/**
+ * neon-water
+ *
+ * The Water variant of the Neon theme system
+ */
+
 @import 'neon-water-vars';
 @import 'neon-renderer';
