--- a/assets/v2/neon/neon-typography-vars.scss
+++ b/assets/v2/neon/neon-typography-vars.scss
@@ -18,18 +18,19 @@ $font-family-h5: $font-family-sub-subheading;
 $font-family-h6: $font-family-sub-subheading;
 
 
-$font-size-title: 20pt;
-$font-size-subheading: 16pt;
+$font-size-title: 20px;
+$font-size-subheading: 16px;
 
-$font-size-h1: 36pt;
-$font-size-h2: 30pt;
-$font-size-h3: 24pt;
-$font-size-h4: 18pt;
-$font-size-h5: 18pt;
-$font-size-h6: 16pt;
+$font-size-h1: 36px;
+$font-size-h2: 30px;
+$font-size-h3: 24px;
+$font-size-h4: 18px;
+$font-size-h5: 18px;
+$font-size-h6: 16px;
 
-$font-size-body: 11pt;
-$font-size-button: 14pt;
+$font-size-body: 11px;
+$font-size-button: 14px;
+$font-size-dense-button: 13px;
 
 
 $font-weight-h1: 100;
