--- a/assets/v2/material/material-shadows-vars.scss
+++ b/assets/v2/material/material-shadows-vars.scss
@@ -5,6 +5,8 @@
 //
 // Based on https://material.io/guidelines/resources/shadows.html
 
+// TODO: Eventually use @apply like in https://github.com/PolymerElements/paper-styles/blob/master/shadow.html
+
 @mixin make-material-shadow($umbra-y-pos, $umbra-blur, $umbra-spread,
                             $penumbra-y-pos, $penumbra-blur, $penumbra-spread,
                             $ambient-y-pos, $ambient-blur) {
@@ -62,4 +64,34 @@
     );
 }
 
-// TODO: z9 through z24
+@mixin shadow-z9() {
+    @include make-material-shadow(
+        9px, 12px, 1px,
+        3px, 16px, 2px,
+        5px, 6px
+    );
+}
+
+@mixin shadow-z12() {
+    @include make-material-shadow(
+        12px, 17px, 2px,
+        5px,  22px, 4px,
+        7px,  8px
+    );
+}
+
+@mixin shadow-z16() {
+    @include make-material-shadow(
+        16px, 24px, 2px,
+        6px,  30px, 5px,
+        8px, 10px
+    );
+}
+
+@mixin shadow-z24() {
+    @include make-material-shadow(
+        24px, 38px, 3px,
+        9px,  46px, 8px,
+        11px, 15px
+    );
+}
