--- a/assets/v2/neon/neon-shared-vars.scss
+++ b/assets/v2/neon/neon-shared-vars.scss
@@ -3,12 +3,35 @@
 //
 // Variables that all Neon subthemes use
 
+@import 'css-vars';
+$css-vars-use-native: true;
+
+
+
 $light-theme-background-color: #FFF !default;
 $dark-theme-background-color: #111618 !default;
 $black-theme-background-color: #000 !default;
-$default-theme-background-color: $light-theme-background-color !default;
+$default-theme-background-color: var(--light-theme-background-color) !default;
 
 $light-theme-foreground-color: #212121 !default;
 $dark-theme-foreground-color: #eee !default;
 $black-theme-foreground-color: #eee !default;
-$default-theme-foreground-color: $light-theme-foreground-color !default;
+$default-theme-foreground-color: var(--light-theme-foreground-color) !default;
+$theme-foreground-color-for-colored-bg: var(--dark-theme-foreground-color) !default;
+
+
+
+// MARK: - Marshall Sass variables to CSS custom properties
+
+@include css-vars((
+    --light-theme-background-color:   $light-theme-background-color,
+    --dark-theme-background-color:    $dark-theme-background-color,
+    --black-theme-background-color:   $black-theme-background-color,
+    --default-theme-background-color: $default-theme-background-color,
+
+    --light-theme-foreground-color:          $light-theme-foreground-color,
+    --dark-theme-foreground-color:           $dark-theme-foreground-color,
+    --black-theme-foreground-color:          $black-theme-foreground-color,
+    --default-theme-foreground-color:        $default-theme-foreground-color,
+    --theme-foreground-color-for-colored-bg: $theme-foreground-color-for-colored-bg,
+));
