--- a/assets/v2/neon/neon-typography-vars.scss
+++ b/assets/v2/neon/neon-typography-vars.scss
@@ -3,54 +3,67 @@
 //
 // Variables for Neon CSS typography
 
+
+
+@import 'css-vars';
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto+Mono|Roboto+Slab:100,300,400,700|Roboto:100,300,400,400i,500,500i,700,900&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese');
 
-$font-family-primary: 'Roboto', sans-serif;
-$font-family-title: $font-family-primary;
-$font-family-subheading: 'Roboto Slab', sans-serif;
-$font-family-sub-subheading: 'Roboto Condensed', sans-serif;
-
-$font-family-h1: $font-family-title;
-$font-family-h2: $font-family-subheading;
-$font-family-h3: $font-family-subheading;
-$font-family-h4: $font-family-subheading;
-$font-family-h5: $font-family-sub-subheading;
-$font-family-h6: $font-family-sub-subheading;
 
 
-$font-size-title: 20px;
-$font-size-subheading: 16px;
+$font-family-primary: 'Roboto', sans-serif !default;
+$font-family-title: $font-family-primary !default;
+$font-family-subheading: 'Roboto Slab', sans-serif !default;
+$font-family-sub-subheading: 'Roboto Condensed', sans-serif !default;
 
-$font-size-h1: 36px;
-$font-size-h2: 30px;
-$font-size-h3: 24px;
-$font-size-h4: 18px;
-$font-size-h5: 18px;
-$font-size-h6: 16px;
-
-$font-size-body: 11px;
-$font-size-button: 14px;
-$font-size-dense-button: 13px;
+$font-family-h1: $font-family-title !default;
+$font-family-h2: $font-family-subheading !default;
+$font-family-h3: $font-family-subheading !default;
+$font-family-h4: $font-family-subheading !default;
+$font-family-h5: $font-family-sub-subheading !default;
+$font-family-h6: $font-family-sub-subheading !default;
 
 
-$font-weight-h1: 100;
-$font-weight-h2: 200;
-$font-weight-h3: 200;
-$font-weight-h4: 300;
-$font-weight-h5: 400;
-$font-weight-h6: 400;
+$font-size-title: 20px !default;
+$font-size-subheading: 16px !default;
 
-$font-weight-button: 500;
+$font-size-h1: 36px !default;
+$font-size-h2: 30px !default;
+$font-size-h3: 24px !default;
+$font-size-h4: 18px !default;
+$font-size-h5: 18px !default;
+$font-size-h6: 16px !default;
 
-
-$font-h1: $font-weight-h1 $font-size-h1 $font-family-h1;
-$font-h2: $font-weight-h2 $font-size-h2 $font-family-h2;
-$font-h3: $font-weight-h3 $font-size-h3 $font-family-h3;
-$font-h4: $font-weight-h4 $font-size-h4 $font-family-h4;
-$font-h5: $font-weight-h5 $font-size-h5 $font-family-h5;
-$font-h6: $font-weight-h6 $font-size-h6 $font-family-h6;
-
-$font-button: $font-weight-button $font-size-button $font-family-primary;
+$font-size-body: 11px !default;
+$font-size-button: 14px !default;
+$font-size-dense-button: 13px !default;
 
 
-$text-transform-button: UPPERCASE;
+$font-weight-h1: 100 !default;
+$font-weight-h2: 200 !default;
+$font-weight-h3: 200 !default;
+$font-weight-h4: 300 !default;
+$font-weight-h5: 400 !default;
+$font-weight-h6: 400 !default;
+
+$font-weight-button: 500 !default;
+
+
+$font-h1: $font-weight-h1 $font-size-h1 $font-family-h1 !default;
+$font-h2: $font-weight-h2 $font-size-h2 $font-family-h2 !default;
+$font-h3: $font-weight-h3 $font-size-h3 $font-family-h3 !default;
+$font-h4: $font-weight-h4 $font-size-h4 $font-family-h4 !default;
+$font-h5: $font-weight-h5 $font-size-h5 $font-family-h5 !default;
+$font-h6: $font-weight-h6 $font-size-h6 $font-family-h6 !default;
+
+$font-button: $font-weight-button $font-size-button $font-family-primary !default;
+
+
+$text-transform-button: UPPERCASE !default;
+
+
+
+// MARK: Marshall
+
+@include css-vars((
+    --font-family-primary: $font-family-primary,
+));
