--- a/assets/v2/neon/neon-animation-renderer.scss
+++ b/assets/v2/neon/neon-animation-renderer.scss
@@ -15,6 +15,7 @@
 * {
     transition-duration: var(--animation-duration-default);
     transition-timing-function: ease-in-out;
+    transition-property: none;
 }
 
 
