--- a/assets/v2/neon/neon-shared-vars.scss
+++ b/assets/v2/neon/neon-shared-vars.scss
@@ -9,7 +9,7 @@ $css-vars-use-native: true;
 
 
 $light-theme-background-color: #FFF !default;
-$dark-theme-background-color: #111618 !default;
+$dark-theme-background-color: #263238 !default;
 $black-theme-background-color: #000 !default;
 $default-theme-background-color: var(--light-theme-background-color) !default;
 
@@ -17,7 +17,7 @@ $light-theme-foreground-color: #212121 !default;
 $dark-theme-foreground-color: #eee !default;
 $black-theme-foreground-color: #eee !default;
 $default-theme-foreground-color: var(--light-theme-foreground-color) !default;
-$theme-foreground-color-for-colored-bg: var(--dark-theme-foreground-color) !default;
+$theme-foreground-color-for-colored-bg: #FFF !default;
 
 
 
