--- a/assets/v2/neon/neon-typography-renderer.scss
+++ b/assets/v2/neon/neon-typography-renderer.scss
@@ -11,13 +11,22 @@
     font-family: var(--font-family-primary);
 }
 
-h1 { font: $font-h1; }
-h2 { font: $font-h2; }
-h3 { font: $font-h3; }
-h4 { font: $font-h4; }
-h5 { font: $font-h5; }
-h6 { font: $font-h6; }
+h1 { font: var(--font-h1); }
+h2 { font: var(--font-h2); }
+h3 { font: var(--font-h3); }
+h4 { font: var(--font-h4); }
+h5 { font: var(--font-h5); }
+h6 { font: var(--font-h6); }
 
 .app-bar h1 {
-    font-size: $font-size-title;
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-title);
+    font-weight: var(--font-weight-title);
+    text-align: var(--text-align-title);
+}
+
+
+.button,
+button {
+    font: var(--font-button);
 }
