--- a/assets/v2/structure/flex.scss
+++ b/assets/v2/structure/flex.scss
@@ -20,6 +20,8 @@
 
 
 @mixin flex-row($require-old-syntaxes: true, $init-children: true) {
+    @include display-flex($require-old-syntaxes: $require-old-syntaxes);
+
     @if ($require-old-syntaxes) {
         -webkit-box-orient: horizontal;
            -moz-box-orient: horizontal;
@@ -35,6 +37,8 @@
 
 
 @mixin flex-column($require-old-syntaxes: true, $init-children: true) {
+    @include display-flex($require-old-syntaxes: $require-old-syntaxes);
+
     @if ($require-old-syntaxes) {
         -webkit-box-orient: vertical;
            -moz-box-orient: vertical;
@@ -50,6 +54,8 @@
 
 
 @mixin flex-reverse-row($require-old-syntaxes: true, $init-children: true) {
+    @include display-flex($require-old-syntaxes: $require-old-syntaxes);
+
     @if ($require-old-syntaxes) {
         -webkit-box-direction: reverse;
            -moz-box-direction: reverse;
@@ -65,6 +71,8 @@
 
 
 @mixin flex-reverse-column($require-old-syntaxes: true, $init-children: true) {
+    @include display-flex($require-old-syntaxes: $require-old-syntaxes);
+
     @if ($require-old-syntaxes) {
         -webkit-box-direction: reverse;
            -moz-box-direction: reverse;
